@@ -41,7 +41,7 @@ class AccountsController < ApplicationController
   #----------------------------------------------------------------------------
   def new
     @account = Account.new(:user => @current_user)
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     if params[:related]
       model, id = params[:related].split("_")
       instance_variable_set("@#{model}", model.classify.constantize.find(id))
@@ -57,7 +57,7 @@ class AccountsController < ApplicationController
   #----------------------------------------------------------------------------
   def edit
     @account = Account.my(@current_user).find(params[:id])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     if params[:previous] =~ /(\d+)\z/
       @previous = Account.find($1)
     end
@@ -72,7 +72,7 @@ class AccountsController < ApplicationController
   #----------------------------------------------------------------------------
   def create
     @account = Account.new(params[:account])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
 
     respond_to do |format|
       if @account.save_with_permissions(params[:users])
@@ -99,7 +99,7 @@ class AccountsController < ApplicationController
         format.js
         format.xml  { head :ok }
       else
-        @users = User.all_except(@current_user) # Need it to redraw [Edit Account] form.
+        @users = User.except(@current_user).all # Need it to redraw [Edit Account] form.
         format.js
         format.xml  { render :xml => @account.errors, :status => :unprocessable_entity }
       end
