@@ -42,7 +42,7 @@ class CampaignsController < ApplicationController
   #----------------------------------------------------------------------------
   def new
     @campaign = Campaign.new(:user => @current_user)
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     if params[:related]
       model, id = params[:related].split("_")
       instance_variable_set("@#{model}", model.classify.constantize.find(id))
@@ -58,7 +58,7 @@ class CampaignsController < ApplicationController
   #----------------------------------------------------------------------------
   def edit
     @campaign = Campaign.my(@current_user).find(params[:id])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     if params[:previous] =~ /(\d+)\z/
       @previous = Campaign.find($1)
     end
@@ -73,7 +73,7 @@ class CampaignsController < ApplicationController
   #----------------------------------------------------------------------------
   def create
     @campaign = Campaign.new(params[:campaign])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
 
     respond_to do |format|
       if @campaign.save_with_permissions(params[:users])
@@ -100,7 +100,7 @@ class CampaignsController < ApplicationController
         format.js
         format.xml  { head :ok }
       else
-        @users = User.all_except(@current_user) # Need it to redraw [Edit Campaign] form.
+        @users = User.except(@current_user).all # Need it to redraw [Edit Campaign] form.
         format.js
         format.xml  { render :xml => @campaign.errors, :status => :unprocessable_entity }
       end
