@@ -41,7 +41,7 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def new
     @lead = Lead.new
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     @campaigns = Campaign.my(@current_user).all(:order => "name")
     if params[:related]
       model, id = params[:related].split("_")
@@ -58,7 +58,7 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def edit
     @lead = Lead.my(@current_user).find(params[:id])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     @campaigns = Campaign.my(@current_user).all(:order => "name")
     if params[:previous] =~ /(\d+)\z/
       @previous = Lead.find($1)
@@ -74,7 +74,7 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def create
     @lead = Lead.new(params[:lead])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     @campaigns = Campaign.my(@current_user).all(:order => "name")
 
     respond_to do |format|
@@ -104,7 +104,7 @@ class LeadsController < ApplicationController
         format.js
         format.xml  { head :ok }
       else
-        @users = User.all_except(@current_user)
+        @users = User.except(@current_user).all
         @campaigns = Campaign.my(@current_user).all(:order => "name")
         format.js
         format.xml  { render :xml => @lead.errors, :status => :unprocessable_entity }
@@ -131,7 +131,7 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def convert
     @lead = Lead.find(params[:id])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     @account = Account.new(:user => @current_user, :name => @lead.company, :access => "Lead")
     @accounts = Account.my(@current_user).all(:order => "name")
     @opportunity = Opportunity.new(:user => @current_user, :access => "Lead", :stage => "prospecting")
@@ -142,7 +142,7 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def promote
     @lead = Lead.find(params[:id])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     @account, @opportunity, @contact = @lead.promote(params)
     @accounts = Account.my(@current_user).all(:order => "name")
 
