@@ -42,7 +42,7 @@ class OpportunitiesController < ApplicationController
   #----------------------------------------------------------------------------
   def new
     @opportunity = Opportunity.new(:user => @current_user, :stage => "prospecting")
-    @users       = User.all_except(@current_user)
+    @users       = User.except(@current_user).all
     @account     = Account.new(:user => @current_user)
     @accounts    = Account.my(@current_user).all(:order => "name")
     if params[:related]
@@ -60,7 +60,7 @@ class OpportunitiesController < ApplicationController
   #----------------------------------------------------------------------------
   def edit
     @opportunity = Opportunity.my(@current_user).find(params[:id])
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     @account  = @opportunity.account || Account.new(:user => @current_user)
     @accounts = Account.my(@current_user).all(:order => "name")
     if params[:previous] =~ /(\d+)\z/
@@ -87,7 +87,7 @@ class OpportunitiesController < ApplicationController
         format.js   # create.js.rjs
         format.xml  { render :xml => @opportunity, :status => :created, :location => @opportunity }
       else
-        @users = User.all_except(@current_user)
+        @users = User.except(@current_user).all
         @accounts = Account.my(@current_user).all(:order => "name")
         unless params[:account][:id].blank?
           @account = Account.find(params[:account][:id])
@@ -118,7 +118,7 @@ class OpportunitiesController < ApplicationController
         format.js
         format.xml  { head :ok }
       else
-        @users = User.all_except(@current_user)
+        @users = User.except(@current_user).all
         @accounts = Account.my(@current_user).all(:order => "name")
         if @opportunity.account
           @account = Account.find(@opportunity.account.id)
