@@ -33,7 +33,7 @@ class TasksController < ApplicationController
   def new
     @view = params[:view] || "pending"
     @task = Task.new
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     @bucket = Setting.task_bucket[1..-1] << [ "On Specific Date...", :specific_time ]
     @category = Setting.invert(:task_category)
     if params[:related]
@@ -52,7 +52,7 @@ class TasksController < ApplicationController
   def edit
     @task = Task.find(params[:id])
     @view = params[:view] || "pending"
-    @users = User.all_except(@current_user)
+    @users = User.except(@current_user).all
     @bucket = Setting.task_bucket[1..-1] << [ "On Specific Date...", :specific_time ]
     @category = Setting.invert(:task_category)
     @asset = @task.asset if @task.asset_id?
